[package]
name = "php-tracking-ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ext-php-rs = { version = "0.15" }
futures-util = "0.3"
lazy_static = "1.5"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = [
    "time",
    "sync",
    "rt",
    "rt-multi-thread",
] }
tokio-tungstenite = "0.28"
url = "2.5"

[build-dependencies]
built = { version = "0.8", features = ["chrono"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "debuginfo"
