[package]
name = "php-tracking-ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ext-php-rs = { version = "0.15" }
lazy_static = "1.5"
libc = "0.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
built = { version = "0.8", features = ["chrono"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = "debuginfo"
